<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java</string>
    <string name="quantity">Quantity</string>
    <string name="Zero" translatable="false">0</string>
    <string name="order">Order</string>
    <string name="price" translatable="false">price</string>
    <string name="Add" translatable="false">+</string>
    <string name="Minus" translatable="false">-</string>
    <string name="toppings">Toppings</string>
    <string name="name">Name</string>
    <string name="total" translatable="false">Total</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="_2" translatable="false">2</string>
    <string name="thank_you">Thank Tou!</string>
    <string name="order_summary_name">Name: <xliff:g id="name" example="Amy">%s</xliff:g></string>
    <string name="order_summary_email_subject">Just Java For <xliff:g id="name" example="Amy">%s</xliff:g></string>
    <string name="order_summary_price">Total: <xliff:g id="price" example="$10">%s</xliff:g></string>
    <string name="order_summary_whipped_cream">Add Whipped Cream?<xliff:g id="addWhippedCream" example="true">%b</xliff:g></string>
    <string name="order_summary_chocolate">Add Chocolate? <xliff:g id="addChocolate" example="true">%b</xliff:g></string>
    <string name="order_summary_quantity">Quantity: <xliff:g id="quantity" example="2">%d</xliff:g></string>
</resources>